// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parserUtils findHeaders one header: bond 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "position": Position {
          "end": Object {
            "column": 5,
            "line": 1,
            "offset": 4,
          },
          "indent": Array [],
          "start": Object {
            "column": 3,
            "line": 1,
            "offset": 2,
          },
        },
        "type": "text",
        "value": "h1",
      },
    ],
    "depth": 1,
    "position": Position {
      "end": Object {
        "column": 5,
        "line": 1,
        "offset": 4,
      },
      "indent": Array [],
      "start": Object {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "heading",
  },
]
`;

exports[`parserUtils findLinks empty link 1`] = `Array []`;

exports[`parserUtils findLinks one link: bond 1`] = `
Array [
  Object {
    "alias": "bar",
    "from": Object {
      "fname": "foo",
      "id": "foo",
      "vault": Object {
        "fsPath": "vault1",
      },
    },
    "original": "bar",
    "pos": Object {
      "end": 7,
      "start": 0,
    },
    "to": Object {
      "anchorHeader": undefined,
      "fname": "bar",
      "vault": undefined,
    },
    "type": "wiki",
    "value": "bar",
  },
]
`;

exports[`parserUtils findLinks xvault link 1`] = `
Array [
  Object {
    "alias": "bar",
    "from": Object {
      "fname": "foo",
      "id": "foo",
      "vault": Object {
        "fsPath": "vault1",
      },
    },
    "original": "bar",
    "pos": Object {
      "end": 24,
      "start": 0,
    },
    "to": Object {
      "anchorHeader": undefined,
      "fname": "bar",
      "vault": Object {
        "fsPath": "vault2",
      },
    },
    "type": "wiki",
    "value": "bar",
  },
]
`;

exports[`parserUtils replaceLinks fenced code 1`] = `
"\`\`\`
[[bond]]
\`\`\`

"
`;

exports[`parserUtils replaceLinks inline code 1`] = `
"\`[[bond]]\`

"
`;

exports[`parserUtils replaceLinks multiple 1`] = `
"[[bar]]
[[bar]]

"
`;

exports[`parserUtils replaceLinks one 1`] = `
"[[bar]]

"
`;

exports[`parserUtils replaceLinks ref 1`] = `
"![[bar]]

"
`;

exports[`parserUtils replaceLinks with alias 1`] = `
"[[hero|bar]]

"
`;

exports[`parserUtils replaceLinks with offset  1`] = `
"   [[bar]]

"
`;
